<resources>
    <string name="app_name">Project1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_classStore">Classes</string>
    <string name="menu_assignmentStore">Assignments</string>
    <string name="menu_examStore">Exams</string>
    <string name="menu_todoStore">Todos</string>
    <string name="teacherNameHint">Teacher Name</string>
    <string name="timeRangeResource">Time Range (e.g., 10:00 AM - 11:15 AM)</string>
    <string name="classTitleSelector">Class Title</string>
</resources>