<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.project1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/classStore"
        android:name="com.example.project1.ui.classStore.ClassStoreFragment"
        android:label="@string/menu_classStore"
        tools:layout="@layout/fragment_class_store" />

    <fragment
        android:id="@+id/assignmentStore"
        android:name="com.example.project1.ui.assignment.AssignmentFragment"
        android:label="@string/menu_assignmentStore"
        tools:layout="@layout/fragment_assignment" />
    <fragment
        android:id="@+id/examStore"
        android:name="com.example.project1.ui.exam.ExamFragment"
        android:label="@string/menu_examStore"
        tools:layout="@layout/fragment_exam"
        />
</navigation>